Modernize fork for Java 25 and Gradle 9
Java toolchain bumped from 17 to 25. Gradle wrapper upgraded to 9.6.1
and Foojay resolver added to settings so any JDK 17+ launcher can
provision JDK 25 automatically without a manual install.

ASM 9.1 to 9.8 to parse class file major version 69, which is what
Java 25 emits and what R5CPUTemplate.class gets read as by the
runtime decoder generator. Mockito 5.20 and JUnit Jupiter 5.11 with
the explicit junit-platform-launcher dependency that Gradle 9 now
requires stated.

maven-publish and the GitHub Packages upload block dropped. Consumers
of the ceres dep no longer need a GitHub Packages token; a composite
build against a sibling ceres checkout is expected instead.

gradle.properties gains --enable-native-access=ALL-UNNAMED to silence
the JDK 25 restricted-method warning during the build. All 457 RISC-V
ISA tests still pass on Java 25.

README rewritten to describe the fork state, point at the ceres
composite-build requirement, and note that Sedna is now a pure library
with no standalone entry point.